# lambda_authorizer_example

./: Cargo.toml  README.md
src/: main.rs
